CCLE-3789 * added more spacing between the links via CSS           * added a delete confirmation           * removed delete option from "locked" results           * ensured that delete function only deletes records that are unlocked           * made the links to delete/lock red.

--- a/report/uclastats/styles.css
+++ b/report/uclastats/styles.css
@@ -23,12 +23,12 @@
     font-weight: bold;
 }
 
-.cached-results-table .cannot_manage {
-    opacity: 0.7;
-    /* IE 8 */
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-    /* IE 5-7 */
-    filter: alpha(opacity=70);
+.cached-results-table .red {
+    color: red;
+}
+
+.cached-results-table .cactions a {
+    padding: 0 1em;
 }
 
 #page-admin-report-uclastats-view .parameters {
